--- a/sphinx-simplepdf/source/_static/custom.css
+++ b/sphinx-simplepdf/source/_static/custom.css
@@ -1,61 +1,12 @@
 /* custom */
+
 @font-face {
-  font-family: Work Sans Bold;
+  font-family: Fixel Bold;
   font-weight: bold;
-  src: url(fonts/FixelDisplay-Bold.otf); }
+  src: url(fonts/FixelDisplay-Bold.otf); 
+}
 
-@font-face {
-  font-family: Work Sans Bold;
-  font-weight: 400;
-  src: url(fonts/FixelDisplay-Bold.otf); }
-
-@font-face {
-  font-family: Work Sans;
-  font-weight: 400;
-  src: url(fonts/FixelDisplay-Bold.otf); }
-
-@font-face {
-  font-family: Fira Sans;
-  font-weight: 400;
-  src: url(fonts/FixelDisplay-Bold.otf); }
-
-@font-face {
-  font-family: Fira Sans;
-  font-style: italic;
-  font-weight: 400;
-  src: url(fonts/FixelDisplay-Bold.otf); }
-
-@font-face {
-  font-family: Fira Sans;
-  font-weight: 300;
-  src: url(fonts/FixelDisplay-Bold.otf); }
-
-@font-face {
-  font-family: Fira Sans;
-  font-style: italic;
-  font-weight: 300;
-  src: url(fonts/FixelDisplay-Bold.otf); }
-
-@font-face {
-  font-family: Fira Sans;
-  font-weight: bold;
-  src: url(fonts/FixelDisplay-Bold.otf); }
-
-@font-face {
-  font-family: fontawesome-webfont;
-  src: url("fonts/fa-solid-900.eot");
-  src: url("fonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("fonts/fa-solid-900.ttf") format("truetype"), url("fonts/fa-solid-900.svg#fontawesome-webfont") format("svg"); }
-
-@font-face {
-  font-family: monospace;
-  src: url(fonts/FiraMono-Regular.ttf); }
-
-@font-face {
-  font-family: monospace;
-  font-weight: 400;
-  src: url(fonts/FiraMono-Medium.ttf); }
-
-@font-face {
-  font-family: monospace;
-  font-weight: bold;
-  src: url(fonts/FiraMono-Bold.ttf); }
+h1, h2 {
+ 	font-family: Fixel Bold;
+ 	border: 2px solid red;
+ }
